# ta-ting

./: .gitignore  AUTO_UPDATE_COMPLETE.md  AUTO_UPDATE_SETUP.md  CICD_COMPLETE.md  CLAUDE.md  GITHUB_SECRET_CONFIGURED.md  GITHUB_SECRET_SETUP.md  GITHUB_SETUP.md  INTEGRATION_COMPLETE.md  PUNCTUATION_DELIVERY.md  PUNCTUATION_QUICKSTART.md  PUNCTUATION_README.md  README.md  TESTING_GUIDE.md  WORKFLOWS_GUIDE.md  diagnose-full.ps1  diagnose-port.ps1  download_punctuation_model.py  index.html  package-lock.json  package.json  recording.html  start-tating.ps1  start.bat  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: AUTO_UPDATE_GUIDE.md  PUNCTUATION_IMPLEMENTATION_SUMMARY.md  PUNCTUATION_RESTORATION.md  PUNCT_CURRENT_STATUS.md
scripts/: add_to_path.ps1  download-models.ps1  download-models.sh
src/: App.tsx  main.tsx  recording-main.tsx
src-tauri/: Cargo.toml  ta-ting.exe.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/models/sherpa-zh/: README.md
src-tauri/src/: lib.rs  main.rs  model_manager.rs
src-tauri/src/asr/: mod.rs  sherpa_engine.rs
src-tauri/src/audio/: mod.rs  recorder.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/core/: app.rs  mod.rs  state_machine.rs
src-tauri/src/punctuation/: mod.rs  processor.rs.disabled  rule_based.rs
src-tauri/src/system/: clipboard.rs  hotkey.rs  input.rs  mod.rs  tray.rs
src/components/: ModelSelector.tsx  RecordingIndicator.tsx  SettingsPanel.tsx  UpdateChecker.tsx
src/components/ui/: badge.tsx
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh.ts
src/pages/: HomePage.tsx  RecordingWindow.tsx  SettingsPage.tsx
src/stores/: appStore.ts
src/styles/: global.css
